skills/flightdeck/lib/flightdeck-dashboard/tests/snapshots/snapshot_tabs__help_overlay.snap
---
source: tests/snapshot_tabs.rs
expression: "common::render_model(&model)"
---
"┌ Flightdeck ──────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────┐"
"│ Flightdeck   session demo-mixed  ·  Master pi at /repo/demo  ·  daemon: file-mode  ·  uptime 2h25m  ·  Adhoc 1 · Issue 1 · Workflow 1  ·  4m old  $0.00 · 0 turns · in 0 / out 0              moon ▾ │"
"└──────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────┘"
"┌ tabs ────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────┐"
"│ Overview │ Activity │ Conversations │ Merges │ Decisions │ Costs │ Daemon                                                                                                                            │"
"└──────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────┘"
"┌ left rail ───────────────┐┌ sessions (3 tracked) ────────────────────────────────────────────────────────────────────────────────────────────────────────┐┌ detail ──────────────────────────────────┐"
"│Status               ┌ Help ───────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────[ ✕ ]┐eader                │"
"│▸ Needs input        │ Navigation, mouse support, and legend                                                                                                                    │ Needs input         │"
"│Submitting         1 │ Navigation                                                                                                                                               │mpt                  │"
"│Running            1 │ ↹ tabs   j/k or ↑/↓ move between rows   Home/End jump                                                                                                    │                     │"
"│                     │                                                                                                                                                          │                     │"
"│Merge queue          │ Selection                                                                                                                                                │                     │"
"│1. VST-101  Needs inp│ Enter opens the selected detail popup. Click a row to select; click selected row again for detail.                                                       │                     │"
"│2. VST-102  queued   │                                                                                                                                                          │01                   │"
"│                     │ View toggles                                                                                                                                             │es/vst-101           │"
"│Conflicts            │ / filter   Ctrl+N show noise   Alt+M compact   ? help   T theme                                                                                          │                     │"
"│• VST-101 ↔ VST-102  │                                                                                                                                                          │                     │"
"│                     │ Mouse                                                                                                                                                    │                     │"
"│                     │ Click tabs, rows, footer hints, the pause banner, daemon chip, or theme chip. Scroll inside tables to move selection.                                    │al=7 (1.4x bigger    │"
"│                     │                                                                                                                                                          │                     │"
"│                     │ Theme                                                                                                                                                    │                     │"
"│                     │ Open the theme picker with T or by clicking the theme chip in the header.                                                                                │                     │"
"│                     │                                                                                                                                                          │e)                   │"
"│                     │ Legend                                                                                                                                                   │                     │"
"│                     │ Kind badges     AH = Adhoc · ISS = Issue · WF = Workflow                                                                                                 │                     │"
"│                     │ State counts    P = Needs input · S = Submitting · W = Running · R = Idle                                                                                │ — sibling worktree  │"
"│                     │ MR = Ready to merge · M = Merged · C = Completed                                                                                                         │                     │"
"│                     │ D = Stopped · CA = Cancelled · AB = Aborted                                                                                                              │                     │"
"│                     │ Status chips    fresh / 1m old / 5m old · stale = how recent the state is                                                                                │                     │"
"│                     │ file-mode = reading the state file directly; observer = different tmux pane than master                                                                  │                     │"
"│                     │ Spinners        Braille spinner next to a badge means transient work is being polled                                                                     │                     │"
"│                     │ PR / path       Pull Request number and local git worktree/path                                                                                          │                     │"
"│                     │                                                                                                                                                          │                     │"
"│                     │ Keyboard                                                                                                                                                 │                     │"
"│                     │ Tab             Next tab                                                                                                                                 │                     │"
"│                     │ Shift+Tab       Previous tab                                                                                                                             │                     │"
"│                     │ j / Down        Move selection down                                                                                                                      │                     │"
"│                     │ k / Up          Move selection up                                                                                                                        │                     │"
"│                     │ =               Page down                                                                                                                                │                     │"
"│                     │ -               Page up                                                                                                                                  │                     │"
"│                     │ Home            First row                                                                                                                                │                     │"
"│                     │ End             Last row                                                                                                                                 │                     │"
"│                     │ Enter           Open selected detail                                                                                                                     │                     │"
"│                     │ /               Open text filter input                                                                                                                   │                     │"
"│                     │ f               Open activity filters                                                                                                                    │                     │"
"│                     │ s               Cycle activity session filter                                                                                                            │                     │"
"│                     │ d               Jump to Decisions tab                                                                                                                    │                     │"
"│                     │ e               Export activity view                                                                                                                     │                     │"
"│                     │ D               Prune stale entry                                                                                                                        │                     │"
"│                     │ g               Focus tmux window                                                                                                                        │                     │"
"│                     │                                                                        Esc/? close                                                                       │                     │"
"│                     └──────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────┘                     │"
"│                          ││                                                                                                                              ││                                          │"
"│                          ││                                                                                                                              ││                                          │"
"│                          ││                                                                                                                              ││                                          │"
"│                          ││                                                                                                                              ││                                          │"
"└──────────────────────────┘└──────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────┘└──────────────────────────────────────────┘"
" ↹ tabs   j/k or ↑/↓ select   ⏎ detail   f filters   n noise   s session   d decisions   e export   ? help   q quit                                                        noise: hidden  ·  filter: off"
"                                                                                                                                                                                                        "
