skills/flightdeck/lib/flightdeck-dashboard/tests/snapshots/snapshot_tabs__help_overlay_clears_background.snap
---
source: tests/snapshot_tabs.rs
expression: rendered
---
"┌ Flightdeck ──────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────┐"
"│ Flightdeck   session demo-mixed  ·  Supervisor pi at /repo/demo  ·  state: live file  ·  uptime 2h25m  ·  Adhoc 1 · Issues 1 · Tasks 1  ·  4m old  $0.00 · 0 turns · in 0 / out 0             moon ▾ │"
"└──────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────┘"
"┌ tabs ────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────┐"
"│ Overview │ Activity │ Conversations │ Merges │ Decisions │ Costs │ Daemon                                                                                                                            │"
"└──────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────┘"
"┌ summary ─────────────────┐┌ tracked work (3 items) ──────────────────────────────────────────────────────────────────────────────────────────────────────┐┌ selected work ───────────────────────────┐"
"│Status               ┌ Help ───────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────[ ✕ ]┐eader                │"
"│▸ Needs input        │ Navigation, mouse support, and legend                                                                                                                    │ Needs input         │"
"│Submitting         1 │ Navigation                                                                                                                                               │mpt                  │"
"│Running            1 │ ↹ tabs   j/k or ↑/↓ move between rows   Home/End jump                                                                                                    │                     │"
"│                     │                                                                                                                                                          │                     │"
"│Merge queue          │ Selection                                                                                                                                                │d state reader       │"
"│1. VST-101  Needs inp│ Enter opens the selected detail popup. Click a row to select; click selected row again for detail.                                                       │                     │"
"│2. VST-102  queued   │                                                                                                                                                          │01                   │"
"│                     │ View toggles                                                                                                                                             │es/vst-101           │"
"│Conflicts            │ / filter   Ctrl+N show noise   Alt+M compact   ? help   T theme   S settings                                                                             │                     │"
"│• VST-101 ↔ VST-102  │                                                                                                                                                          │                     │"
"│                     │ Mouse                                                                                                                                                    │                     │"
"│                     │ Click tabs, rows, footer hints, the pause banner, daemon chip, or theme chip. Scroll inside tables to move selection.                                    │                     │"
"│                     │                                                                                                                                                          │al=7 (1.4x bigger    │"
"│                     │ Theme                                                                                                                                                    │                     │"
"│                     │ Open the theme picker with T or by clicking the theme chip in the header.                                                                                │                     │"
"│                     │                                                                                                                                                          │                     │"
"│                     │ Legend                                                                                                                                                   │e)                   │"
"│                     │ Kind badges     Adhoc · Issue · Task (plan/workflow item)                                                                                                │                     │"
"│                     │ State counts    P = Needs input · S = Submitting · W = Running · R = Idle                                                                                │                     │"
"│                     │ MR = Ready to merge · M = Merged · C = Completed                                                                                                         │up prompt needs      │"
"│                     │ D = Stopped · CA = Cancelled · AB = Aborted                                                                                                              │                     │"
"│                     │ Status chips    fresh / 1m old / 5m old · stale = how recent the state is                                                                                │on started for       │"
"│                     │ state: live file = dashboard is watching the Flightdeck state file                                                                                       │                     │"
"│                     │ observer = viewing a session owned by another supervisor pane                                                                                            │                     │"
"│                     │ Spinners        Braille spinner next to a badge means transient work is being polled                                                                     │                     │"
"│                     │ PR / path       Pull Request number and local git worktree/path                                                                                          │ — sibling worktree  │"
"│                     │                                                                                                                                                          │                     │"
"│                     │ Keyboard                                                                                                                                                 │                     │"
"│                     │ Tab             Next tab                                                                                                                                 │                     │"
"│                     │ Shift+Tab       Previous tab                                                                                                                             │                     │"
"│                     │ j / Down        Move selection down                                                                                                                      │                     │"
"│                     │ k / Up          Move selection up                                                                                                                        │                     │"
"│                     │ =               Page down                                                                                                                                │                     │"
"│                     │ -               Page up                                                                                                                                  │                     │"
"│                     │ Home            First row                                                                                                                                │                     │"
"│                     │ End             Last row                                                                                                                                 │                     │"
"│                     │ Enter           Open selected detail                                                                                                                     │                     │"
"│                     │ /               Open text filter input                                                                                                                   │                     │"
"│                     │ f               Open activity filters                                                                                                                    │                     │"
"│                     │ s               Cycle activity session filter                                                                                                            │                     │"
"│                     │ d               Jump to Decisions tab                                                                                                                    │                     │"
"│                     │ e               Export activity view                                                                                                                     │                     │"
"│                     │ D               Prune stale entry                                                                                                                        │                     │"
"│                     │                                                                        Esc/? close                                                                       │                     │"
"│                     └──────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────┘                     │"
"│                          ││                                                                                                                              ││                                          │"
"│                          ││                                                                                                                              ││                                          │"
"│                          ││                                                                                                                              ││                                          │"
"│                          ││                                                                                                                              ││                                          │"
"└──────────────────────────┘└──────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────┘└──────────────────────────────────────────┘"
" ↹ tabs   j/k or ↑/↓ select   ⏎ detail   H history   f filters   n noise   s session   d decisions   e export   ? help   q quit                                            noise: hidden  ·  filter: off"
"                                                                                                                                                                                                        "
